--- a/spring-testing/pom.xml
+++ b/spring-testing/pom.xml
@@ -18,7 +18,16 @@
 		<java.version>1.8</java.version>
 	</properties>
 
+	<repositories>
+	<repository>
+		<id>my-repo1</id>
+		<name>your custom repo</name>
+		<url>https://maven.repository.redhat.com/earlyaccess/all/</url>
+	</repository>
+	</repositories>
+
 	<dependencies>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
