--- a/P02-VehiclesAPI/vehicles-api/src/main/resources/application.properties
+++ b/P02-VehiclesAPI/vehicles-api/src/main/resources/application.properties
@@ -1,2 +1,13 @@
 pricing.endpoint=http://localhost:8082
 maps.endpoint=http://localhost:9191
+
+# H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+spring.datasource.url=jdbc:h2:mem:vehicledata
+
+# Eureka
+spring.application.name=vehicles-service
+server.port=8080
+edureka.client.service-url-defaultZone=http://localhost:8791/eureka
+eureka.instance.prefer-ip-address=false
