--- a/task-management-app/src/main/resources/application.properties
+++ b/task-management-app/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-spring.profiles.active=dev
+#logging.level.root=DEBUG
+logging.level.root=warn
+logging.level.org.springframework=info
+logging.level.com.piyushpatel2005.ls=debug
+
+logging.file=app.log
+logging.pattern.dateformat=yyyy-MM-dd
