Property Source - to configure additional source of properties.
We can assign different property source by creating property file in 'src/main/resources' directory and using that property file using '@PropertySource' annotation on configuration class. We can also define test specific configuration using '@TestPropertySource' annotation with location of our test property file.
If a property is defined in both 'src/main/resources' and 'src/test/resources', then the value in test resources will have higher priority than the one specified in main source.

--- a/task-management-app/src/main/resources/application.properties
+++ b/task-management-app/src/main/resources/application.properties
@@ -3,5 +3,5 @@ logging.level.root=warn
 logging.level.org.springframework=info
 logging.level.com.piyushpatel2005.ls=debug
 
-logging.file=app.log
+#logging.file=app.log
 logging.pattern.dateformat=yyyy-MM-dd
