Spring Auto configuration -
Spring Boot relies on '@Conditional' annotation and a number of variations to drive auto-configuration.
@ConditionalOnClass
@ConditionalOnMissingClass
@ConditionalOnBean,
@ConditionalOnMissingBean

For example, @ConditionalOnMissingBean will disable a bean and our bean will take priority if defined and found in the class path. We can set 'org.springframework.boot.autoconfigure.logging' to DEBUG mode to get report that contains information on positive matches, negative matches, exclusions and unconditional classes for autoconfiguration.

--- a/task-management-app/src/main/resources/application.properties
+++ b/task-management-app/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 #logging.level.root=DEBUG
-logging.level.root=warn
-logging.level.org.springframework=info
-logging.level.com.piyushpatel2005.ls=debug
+#logging.level.root=warn
+#logging.level.org.springframework=info
+#logging.level.com.piyushpatel2005.ls=debug
+logging.level.org.springframework.boot.autoconfigure.logging=DEBUG
 
 #logging.file=app.log
-logging.pattern.dateformat=yyyy-MM-dd
+#logging.pattern.dateformat=yyyy-MM-dd
