Actuator in Spring Boot -
We can get details about application. To create custom Health indicator, we need to implement HealthIndicator interface and override 'health()' method. We can implement various endpoints and customize actuator to our needs. By default, it exposes JMX and HTTP endpoint

--- a/task-management-app/src/main/resources/application.properties
+++ b/task-management-app/src/main/resources/application.properties
@@ -2,7 +2,16 @@
 #logging.level.root=warn
 #logging.level.org.springframework=info
 #logging.level.com.piyushpatel2005.ls=debug
-logging.level.org.springframework.boot.autoconfigure.logging=DEBUG
+#logging.level.org.springframework.boot.autoconfigure.logging=DEBUG
 
 #logging.file=app.log
 #logging.pattern.dateformat=yyyy-MM-dd
+
+# spring actuator configurations /health/info end point
+info.lsapp.name = Learn Spring Application
+info.lsapp.description=Learn Spring Application Development tutorial
+
+# change basepath for actuator to /monitoring
+management.endpoints.web.base-path=/monitoring
+# change /actuator/info to /monitoring/information
+management.endpoints.web.path-mapping.info=/information
