Web configuration tuning -
We can override the 'extendMessageConverters()' method once we extends 'WebMvcConfigurerAdapter'. In this method, we can configure Jackson message converter in serialization and deserialization as shown in this commit.

--- a/user-management-rest/um-webapp/src/main/resources/application.properties
+++ b/user-management-rest/um-webapp/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 server.port = 8080
 server.servlet.context-path = /api
+
+#spring.jackson.serialization.indent-output=true
+#spring.jackson.deserialization.fail-on-unknown-properties=true
