--- a/user-management-rest/um-webapp/src/main/resources/persistence-local.properties
+++ b/user-management-rest/um-webapp/src/main/resources/persistence-local.properties
@@ -6,7 +6,7 @@ jdbc.password=restmy5ql
 
 # hibernate.X
 hibernate.dialect=org.hibernate.dialect.H2Dialect
-hibernate.show_sql=false
+hibernate.show_sql=true
 hibernate.hbm2ddl.auto=create-drop
 
 # persistence.X
