Exception handling and providing better message
We can provide much better message if we handle it using global exception handler. In this example, RestResponseEntityExceptionHandler class handles different kinds of exceptions and provides required information to the client

--- a/user-management-rest/um-webapp/src/main/resources/application.properties
+++ b/user-management-rest/um-webapp/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-server.port = 8080
-server.servlet.context-path = /api
+server.port=8080
+server.servlet.contextPath=/api
 
-#spring.jackson.serialization.indent-output=true
-#spring.jackson.deserialization.fail-on-unknown-properties=true
+spring.profiles.active=deployed
+
