--- a/user-management-rest/pom.xml
+++ b/user-management-rest/pom.xml
@@ -1,85 +1,88 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.piyushpatel2005</groupId>
-  <artifactId>user-management-rest</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>Simple User Management REST API using Spring Boot</name>
-  <packaging>pom</packaging>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
+	<description>REST with Spring</description>
+	<name>user-management-rest</name>
 
-  <properties>
+	<groupId>com.piyushpatel2005</groupId>
+	<artifactId>user-management-rest</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<packaging>pom</packaging>
 
-    <!-- non-dependencies -->
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <java.version>1.8</java.version>
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.3.0.RELEASE</version>
+		<relativePath /> <!-- lookup parent from repository -->
+	</parent>
 
-    <!-- commons and utils -->
-    <guava.version>27.0-jre</guava.version>
+	<build>
 
-  </properties>
+		<plugins>
 
-  <parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.3.0.RELEASE</version>
-   <relativePath />
-  </parent>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+			</plugin>
 
-  <modules>
-  	<module>common</module>
-      <module>um-webapp</module>
-  </modules>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+			</plugin>
 
-  <build>
+		</plugins>
 
-    <plugins>
+		<pluginManagement>
+			<plugins>
 
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-      </plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<configuration>
+						<excludes>
+							<exclude>**/*IntegrationTest.java</exclude>
+							<exclude>**/*LiveTest.java</exclude>
+						</excludes>
+						<systemPropertyVariables>
+							<!-- <provPersistenceTarget>h2</provPersistenceTarget> -->
+						</systemPropertyVariables>
+					</configuration>
+				</plugin>
 
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-      </plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<configuration>
+						<source>1.8</source>
+						<target>1.8</target>
+						<compilerArgument>-proc:none</compilerArgument>
+					</configuration>
+				</plugin>
 
-    </plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-resources-plugin</artifactId>
+				</plugin>
 
-    <pluginManagement>
-      <plugins>
+			</plugins>
+		</pluginManagement>
 
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <configuration>
-            <excludes>
-              <exclude>**/*IntegrationTest.java</exclude>
-              <exclude>**/*LiveTest.java</exclude>
-            </excludes>
-            <systemPropertyVariables>
-              <!-- <provPersistenceTarget>h2</provPersistenceTarget> -->
-            </systemPropertyVariables>
-          </configuration>
-        </plugin>
+	</build>
 
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-            <source>1.8</source>
-            <target>1.8</target>
-            <compilerArgument>-proc:none</compilerArgument>
-          </configuration>
-        </plugin>
+	<properties>
 
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-resources-plugin</artifactId>
-        </plugin>
+		<!-- non-dependencies -->
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<java.version>1.8</java.version>
 
-      </plugins>
-    </pluginManagement>
+		<!-- commons and utils -->
+		<guava.version>27.0-jre</guava.version>
 
-  </build>
+        </properties>
+
+	<modules>
+		<module>common</module>
+		<module>um-webapp</module>
+	</modules>
+
 </project>
